--- a/src/style.css
+++ b/src/style.css
@@ -80,15 +80,23 @@ header {
 .weather-temperature-contents {
   display: flex;
 }
-.weather-forecast-temperature {
-  font-size: 14px;
-}
 
-.weather-forecast-min {
-  color: whitesmoke;
+.upcoming-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
 }
 .upcoming-days {
-  font-size: 20px;
-  font-weight: bold;
-  color: rgb(241, 241, 155);
+  text-align: center;
+  margin-bottom: 10px;
+}
+.weather-forecast-temperature {
+  color: whitesmoke;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+.weather-forecast-units {
+  padding: 0 9px;
 }
